testdata/negative-tests/badgenerics2/badgenerics2.go
package example

type Box[T any] struct { // ERROR generic named type
	v T
}
